Added dependency on socks package

--- a/http-client-tls/http-client-tls.cabal
+++ b/http-client-tls/http-client-tls.cabal
@@ -32,6 +32,7 @@ library
                      , containers
                      , text
                      , network-uri
+                     , socks >= 0.6.0
   default-language:    Haskell2010
   ghc-options:         -Wall
 
